--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+.bench {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.index {
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+}
